[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.3.1"
spl-token = "8.0.0"
spl-associated-token-account = "3.0.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
